// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article component with article. 1`] = `
<div>
  <article
    className="blog-article"
  >
    <header>
      <h1>
        Title
      </h1>
      <span>
        2019-01-01
      </span>
    </header>
    <div
      className="article-content"
    >
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "bla bla bla",
          }
        }
      />
      <div
        className="article-links"
      >
        <NavLink
          className="link-article"
          to="/blog/view/1"
        >
          Read more...
        </NavLink>
      </div>
    </div>
    <NavLink
      className="btn-article"
      to="/"
    >
      Back
    </NavLink>
  </article>
</div>
`;

exports[`Article component with article. 2`] = `
<div>
  <article
    className="blog-article"
  >
    <header>
      <h1>
        Title
      </h1>
      <span>
        2019-01-01
      </span>
    </header>
    <div
      className="article-content"
    >
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "bla bla bla",
          }
        }
      />
      <div
        className="article-links"
      />
    </div>
    <NavLink
      className="btn-article"
      to="/"
    >
      Back
    </NavLink>
  </article>
</div>
`;

exports[`Article component with article. 3`] = `
<div>
  <article
    className="blog-article"
  >
    <header>
      <h1>
        Title
      </h1>
      <span>
        2019-01-01
      </span>
    </header>
    <div
      className="article-content"
    >
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "bla bla bla",
          }
        }
      />
      <div
        className="article-links"
      >
        <NavLink
          className="link-article"
          to="/blog/view/1"
        >
          Read more...
        </NavLink>
      </div>
    </div>
  </article>
</div>
`;

exports[`Article component with article. 4`] = `
<div>
  <article
    className="blog-article"
  >
    <header>
      <h1>
        Title
      </h1>
      <span>
        2019-01-01
      </span>
    </header>
    <div
      className="article-content"
    >
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "bla bla bla",
          }
        }
      />
      <div
        className="article-links"
      />
    </div>
  </article>
</div>
`;

exports[`Article component with empty article. 1`] = `""`;
